# src/main/kotlin/com/andersen/manageclients/api/ClientApiDelegateImpl.kt
@@ -1,7 +1,10 @@
 package com.andersen.manageclients.api
 
+import com.andersen.manageclients.model.ClientPageResponseDto
 import com.andersen.manageclients.model.ClientRequestDto
 import com.andersen.manageclients.model.ClientResponseDto
+import com.andersen.manageclients.model.PageableRequest
+import com.andersen.manageclients.model.SearchCriteria
 import com.andersen.manageclients.service.ClientService
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
@@ -17,9 +20,13 @@ class ClientApiDelegateImpl(
         return ResponseEntity.status(HttpStatus.OK).body(clientService.getById(UUID.fromString(clientId)))
     }
 
-    override fun getAllClients(): ResponseEntity<List<ClientResponseDto>> {
-        return ResponseEntity.status(HttpStatus.OK).body(clientService.getAll())
+    override fun getAllClients(
+        pageable: PageableRequest,
+        searchCriteria: SearchCriteria
+    ): ResponseEntity<ClientPageResponseDto> {
+        return ResponseEntity.status(HttpStatus.OK).body(clientService.getAll(pageable, searchCriteria))
     }
+
 
     override fun deleteClient(clientId: String): ResponseEntity<Unit> {
         clientService.deleteById(UUID.fromString(clientId))
